# connect-ai-embed-sdk-python

./: .env.example  .gitignore  GETTING-STARTED.md  README.md  pyproject.toml  quickstart.py
connectai_embed/: __init__.py  accounts.py  agents.py  auth.py  client.py  connections.py  mcp_client.py  metadata.py  queries.py  types.py
connectai_embed/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py
