[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdata-connect-ai-embed"
version = "1.0.0"
description = "Python SDK for CData Connect AI Embed"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["connectai_embed"]
